# benchmark-risczero

./: .gitignore  BENCHMARK_GUIDE.md  BENCHMARK_SUMMARY.md  Cargo.toml  analyze_benchmarks.py  run_benchmarks.sh
host/: Cargo.toml
host/src/: main.rs
methods/: build.rs
methods/guest/: Cargo.toml  DEVELOPER_GUIDE.md
methods/guest/src/: main.rs
methods/src/: lib.rs
scenarios/: README.md
